KTTL-1852: Fixed background stretching. (#1145)

--- a/src/theme/css/frontend/single/_bottom-recirculation.scss
+++ b/src/theme/css/frontend/single/_bottom-recirculation.scss
@@ -2,7 +2,9 @@
   @apply bg-teal-dark;
 
   body.is-rc & {
-	@apply bg-gradient-article-recirculation;
+    @apply bg-gradient-article-recirculation;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
 
